# eko-agent

./: Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  getting-started.md  introduction.md
docs/src/advanced/: checkpoint.md  derive.md  interrupt.md  retry.md
docs/src/concepts/: channels.md  edges.md  nodes.md  state.md
docs/src/execution/: fan-out.md  subgraph.md  superstep.md
eko-core/: Cargo.toml  README.md
eko-core-derive/: Cargo.toml  LICENSE
eko-core-derive/src/: lib.rs
eko-core/src/: lib.rs
eko-core/src/channels/: barrier.rs  base.rs  binop.rs  dynamic_barrier.rs  ephemeral.rs  last_value.rs  mod.rs  topic.rs
eko-core/src/checkpoint/: memory.rs  mod.rs  saver.rs  types.rs
eko-core/src/core/: error.rs  interaction.rs  llm.rs  message.rs  mod.rs  stream.rs  tool.rs
eko-core/src/graph/: builder.rs  command.rs  compiled.rs  edge.rs  mod.rs  node.rs  send.rs  state_schema.rs  subgraph.rs  task.rs  types.rs
eko-core/src/graph/pregel/: channel_ops.rs  engine.rs  mod.rs  runner.rs
eko-core/tests/: channels.rs  checkpoint.rs  graph_builder.rs  graph_execution.rs  state_schema.rs
